--- a/GNogueira.SupermarketScrapeTool.Service.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Service.fsproj
@@ -10,9 +10,9 @@
   <ItemGroup>
     <Compile Include="Logger.fs" />
     <Compile Include="SecretManager.fs" />
-    <Compile Include="Product.fs" />
-    <Compile Include="PingoDoceScrapper.fs" />
-    <Compile Include="ContinenteScrapper.fs" />
+    <Compile Include="Models\Product.fs" />
+    <Compile Include="Scrappers\ContinenteScrapper.fs" />
+    <Compile Include="Scrappers\PingoDoceScrapper.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
