--- a/GNogueira.SupermarketScrapeTool.API/GNogueira.SupermarketScrapeTool.API.fsproj
+++ b/GNogueira.SupermarketScrapeTool.API/GNogueira.SupermarketScrapeTool.API.fsproj
@@ -7,20 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.9.0" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
     <PackageReference Include="Chiron" Version="7.0.0-beta-180105" />
     <PackageReference Include="FSharpPlus" Version="1.4.1" />
     <PackageReference Include="FsToolkit.ErrorHandling" Version="4.9.0" />
     <PackageReference Include="Giraffe" Version="6.0.0" />
     <PackageReference Update="FSharp.Core" Version="8.0.100-beta.23418.2" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="SecretManager.fs" />
+    <Compile Include="CosmosDbClient.fs" />
     <Compile Include="Models.fs" />
     <Compile Include="HttpHandlers.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Clients\Dto\ProductDto.fs" />
+    <Compile Include="Clients\ProductClient.fs" />
     <Compile Include="Dto\ProductDto.fs" />
     <Compile Include="Endpoints\ProductEndpoint.fs" />
     <Compile Include="Endpoints\Root.fs" />
