--- a/GNogueira.SupermarketScrapeTool.Clients/GNogueira.SupermarketScrapeTool.Clients.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Clients/GNogueira.SupermarketScrapeTool.Clients.fsproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="FSharp.fs" />
         <Compile Include="DTOs\ProductDto.fs" />
         <Compile Include="SecretClient.fs" />
         <Compile Include="CosmosDbClient.fs" />
@@ -16,6 +17,7 @@
       <PackageReference Update="FSharp.Core" Version="8.0.100-beta.23418.2" />
       <PackageReference Include="Azure.Identity" Version="1.10.1" />
       <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
+      <PackageReference Include="FSharp.Quotations.Evaluator" Version="2.1.0" />
       <PackageReference Include="FSharpPlus" Version="1.4.1" />
       <PackageReference Include="FsToolkit.ErrorHandling" Version="4.9.0" />
       <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.4" />
