--- a/GNogueira.SupermarketScrapeTool.Models/GNogueira.SupermarketScrapeTool.Models.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Models/GNogueira.SupermarketScrapeTool.Models.fsproj
@@ -1,18 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Product.fs" />
+        <Compile Include="ProductPrice.fs" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Update="FSharp.Core" Version="8.0.100-beta.23418.2" />
-      <PackageReference Include="FSharpPlus" Version="1.4.1" />
-      <PackageReference Include="FsToolkit.ErrorHandling" Version="4.9.0" />
+      <PackageReference Update="FSharp.Core" Version="8.0.100-beta.23475.2" />
+      <PackageReference Include="FSharpPlus" Version="1.5.0" />
+      <PackageReference Include="FsToolkit.ErrorHandling" Version="4.10.0" />
     </ItemGroup>
 
 </Project>
