--- a/GNogueira.SupermarketScrapeTool.Service/GNogueira.SupermarketScrapeTool.Service.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Service/GNogueira.SupermarketScrapeTool.Service.fsproj
@@ -1,5 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,6 @@
     <RootNamespace>GNogueira.SupermarketScrapeTool.Service</RootNamespace>
     <UserSecretsId>31473dbb-448e-40f5-b220-f360ee2bdd80</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Logger.fs" />
     <Compile Include="SecretManager.fs" />
@@ -19,26 +18,6 @@
     <Compile Include="Run.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3" />
-    <PackageReference Include="Azure.Identity" Version="1.10.3" />
-    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
-    <PackageReference Include="Chiron" Version="7.0.0-beta-180105" />
-    <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
-    <PackageReference Include="FSharpPlus" Version="1.5.0" />
-    <PackageReference Include="FsToolkit.ErrorHandling" Version="4.10.0" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.36.0" />
-    <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.39" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.CosmosDB" Version="4.4.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0-rc.2.23479.6" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0-rc.2.23479.6" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Update="FSharp.Core" Version="8.0.100-beta.23475.2" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
-  </ItemGroup>
-
   <ItemGroup>
     <None Include="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -48,4 +27,5 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
