--- a/GNogueira.SupermarketScrapeTool.API/GNogueira.SupermarketScrapeTool.API.fsproj
+++ b/GNogueira.SupermarketScrapeTool.API/GNogueira.SupermarketScrapeTool.API.fsproj
@@ -1,28 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>GNogueira.SupermarketScrapeTool.API.App</AssemblyName>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.3" />
-    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
-    <PackageReference Include="Chiron" Version="7.0.0-beta-180105" />
-    <PackageReference Include="FSharpPlus" Version="1.5.0" />
-    <PackageReference Include="FsToolkit.ErrorHandling" Version="4.10.0" />
-    <PackageReference Include="Giraffe" Version="6.2.0" />
-    <PackageReference Update="FSharp.Core" Version="8.0.100-beta.23475.2" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.36.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
   <ItemGroup>
     <Compile Include="Models.fs" />
     <Compile Include="HttpHandlers.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Include="DTOs\ProductResponseDto.fs" />
     <Compile Include="DTOs\PagedRequestDto.fs" />
@@ -33,9 +20,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\GNogueira.SupermarketScrapeTool.Clients\GNogueira.SupermarketScrapeTool.Clients.fsproj" />
     <ProjectReference Include="..\GNogueira.SupermarketScrapeTool.Models\GNogueira.SupermarketScrapeTool.Models.fsproj" />
   </ItemGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
