--- a/GNogueira.SupermarketScrapeTool.Clients/GNogueira.SupermarketScrapeTool.Clients.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Clients/GNogueira.SupermarketScrapeTool.Clients.fsproj
@@ -1,37 +1,23 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <Compile Include="FSharp.fs" />
-        <Compile Include="DTOs\ProductPriceDto.fs" />
-        <Compile Include="SecretClient.fs" />
-        <Compile Include="CosmosDbClient.fs" />
-        <Compile Include="ProductPriceClient.fs" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Update="FSharp.Core" Version="8.0.100-beta.23475.2" />
-      <PackageReference Include="Azure.Identity" Version="1.10.3" />
-      <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
-      <PackageReference Include="FSharp.Quotations.Evaluator" Version="2.1.0" />
-      <PackageReference Include="FSharpPlus" Version="1.5.0" />
-      <PackageReference Include="FsToolkit.ErrorHandling" Version="4.10.0" />
-      <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.36.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0-rc.2.23479.6" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.Extensions.Logging.Abstractions">
-        <HintPath>..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.5\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
-      </Reference>
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\GNogueira.SupermarketScrapeTool.Common\GNogueira.SupermarketScrapeTool.Common.fsproj" />
-    </ItemGroup>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
+  </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="FSharp.fs" />
+    <Compile Include="DTOs\ProductPriceDto.fs" />
+    <Compile Include="SecretClient.fs" />
+    <Compile Include="CosmosDbClient.fs" />
+    <Compile Include="ProductPriceClient.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Logging.Abstractions">
+      <HintPath>..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.5\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GNogueira.SupermarketScrapeTool.Common\GNogueira.SupermarketScrapeTool.Common.fsproj" />
+  </ItemGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
