--- a/GNogueira.SupermarketScrapeTool.Models/GNogueira.SupermarketScrapeTool.Models.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Models/GNogueira.SupermarketScrapeTool.Models.fsproj
@@ -8,7 +8,7 @@
     <Version>1.0.4</Version>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="ProductPrice.fs" />
+    <Compile Include="Product.fs" />
     <Content Include="paket.template" />
     <Folder Include=".github\workflows\" />
     <Content Include="paket.references" />
