--- a/GNogueira.SupermarketScrapeTool.Scrapper/GNogueira.SupermarketScrapeTool.Scrapper.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Scrapper/GNogueira.SupermarketScrapeTool.Scrapper.fsproj
@@ -8,9 +8,10 @@
     <Compile Include="paket.references" />
     <Compile Include="Logger.fs" />
     <Compile Include="CompositionRoot.fs" />
-    <Compile Include="DTO\ProductDto.fs" />
+    <Folder Include="DTO\" />
     <Compile Include="Models\ProductLens.fs"/>
     <Compile Include="Models\ScrappedProduct.fs" />
+    <Compile Include="Models\ProductDto.fs" />
     <Compile Include="ContinenteScrapper.fs" />
     <Compile Include="PingoDoceScrapper.fs" />
     <Compile Include="Scrapper.fs" />
