feat(models): add Exceptions types

--- a/GNogueira.SupermarketScrapeTool.Models/GNogueira.SupermarketScrapeTool.Models.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Models/GNogueira.SupermarketScrapeTool.Models.fsproj
@@ -11,6 +11,7 @@
     <Content Include="paket.template" />
     <Folder Include=".github\workflows\" />
     <Content Include="paket.references" />
+    <Compile Include="Exceptions.fs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Product.fs" />
