--- a/GNogueira.SupermarketScrapeTool.Scrapper/GNogueira.SupermarketScrapeTool.Scrapper.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Scrapper/GNogueira.SupermarketScrapeTool.Scrapper.fsproj
@@ -5,7 +5,6 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="paket.references" />
     <Compile Include="Logger.fs" />
     <Compile Include="CompositionRoot.fs" />
     <Folder Include="DTO\" />
@@ -18,6 +17,7 @@
     <Compile Include="AzureHelper.fs" />
     <Compile Include="Start.fs" />
     <Compile Include="Program.fs" />
+    <Content Include="paket.references" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
