--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
+      - name: Install Tools
+        run: dotnet tool restore
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
