Update DB schema for better future proofing (#5)
* wip: refactor ContinenteScrapper.fs

* wip: refactor Start.fs

* wip: start modifiying PingoDoceScrapper

* feat: add initial Scrapper project

* feat(models): update models with breaking changes

* feat(clients): update Models to v2.0.0-beta3

* feat(paket): create paket groups for each project

* feat(scrapper): rename Product.ProductId to Product.Id

* feat(common): add FSharp helpers

* feat(common): add deconstruct type helpers

* feat(models): add deconstruct member to DUs

* fix(models): deconstruct member not using instance

* doc:update readme

* fix(FSharp): deconstruct binding declaration

* fix(clients): use ProductId instead of string

* feat(models): update type ProductSource to have better property naming

* feat(models): add Deconstruct member to type SourceName

* fix(models): use ean as productId

* feat(scrapper): update Models package version

* feat(models): add Deconstruct member to type PriceUnit

* feat(scrapper): update Start.fs to correctly upsert Products

* feat(scrapper): update Start.fs to correctly upsert Products

* feat(clients): update upermarketScrapeTool.Models to 2.0.0-beta10

* feat(common): update Result.fs

* fix(common): wrong Result.ofString definition

* fix(common): wrong String.EmptyString definition

* feat(models): add Exceptions types

* feat(clients): add error handling on ProductClient.GetById

* feat(scrapper): first working version

* feat(clients): add Product.Upsert function

* feat(common): add Regex.tryGroup function

* refactor: remove unused deprecated project

* fix(models): string representation of PriceUnit

* feat: add UploadPackage.ps1 script for automating packaging

* fix(paket): update used packages

* docs: add 'Login to Azure' section on README

* build: add github workflow

* build: fix github workflow

---------

Co-authored-by: Gustavo Nogueira <gutoreis.nogueir@gmail.c

--- a/GNogueira.SupermarketScrapeTool.Common/GNogueira.SupermarketScrapeTool.Common.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Common/GNogueira.SupermarketScrapeTool.Common.fsproj
@@ -8,12 +8,18 @@
     <RepositoryUrl>https://github.com/g-nogueira/supermarket-scrape-tool.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="FSharp.fs" />
-    <Compile Include="Helpers\CosmosDB.fs" />
-    <Compile Include="Logger.fs" />
-    <Compile Include="SecretManager.fs" />
-    <Content Include="paket.template" />
-    <Content Include="paket.references" />
+    <Compile Include="FSharp.fs"/>
+    <Compile Include="String.fs"/>
+    <Compile Include="Result.fs" />
+    <Compile Include="Regex.fs"/>
+    <Compile Include="Option.fs"/>
+    <Compile Include="Async.fs"/>
+    <Compile Include="Optics.fs"/>
+    <Compile Include="Helpers\CosmosDB.fs"/>
+    <Compile Include="Logger.fs"/>
+    <Compile Include="SecretManager.fs"/>
+    <Content Include="paket.template"/>
+    <Content Include="paket.references"/>
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
