--- a/GNogueira.SupermarketScrapeTool.Clients/GNogueira.SupermarketScrapeTool.Clients.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Clients/GNogueira.SupermarketScrapeTool.Clients.fsproj
@@ -3,7 +3,9 @@
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
-    <Version>1.1.0</Version>
+    <Version>2.0.0-beta21</Version>
+    <AssemblyVersion>0.0.1</AssemblyVersion>
+    <FileVersion>2.0.0-beta21</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="FSharp.fs" />
