--- a/GNogueira.SupermarketScrapeTool.Scrapper/GNogueira.SupermarketScrapeTool.Scrapper.fsproj
+++ b/GNogueira.SupermarketScrapeTool.Scrapper/GNogueira.SupermarketScrapeTool.Scrapper.fsproj
@@ -14,10 +14,14 @@
     <Compile Include="ContinenteScrapper.fs" />
     <Compile Include="PingoDoceScrapper.fs" />
     <Compile Include="Scrapper.fs" />
-    <Compile Include="AzureHelper.fs" />
     <Compile Include="Start.fs" />
     <Compile Include="Program.fs" />
     <Content Include="paket.references" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+    <Content Include="..\.development\.secrets">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
